[package]
name = "hsnp"
version = "0.1.0"
authors = [
  "Dario Fiore <dario.fiore@imdea.org>",
  "Ida Tucker <ida.tucker@imdea.org>",
]
description = "An implementation of a pairing-based HSNP"
edition = "2018"

[dependencies]
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-poly = {version = "^0.3.0", default-features = false }
ark-sponge = {version = "^0.3.0", default-features = false}

ark-poly-commit = { path = "../hsnp-poly-commit", version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-nonnative-field = { version = "^0.3.0", default-features = false, optional = true }
hashbrown = { version = "0.9", optional = true }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
blake2 = { version = "0.9", default-features = false }

digest = "0.9"
rayon = { version = "1", optional = true }
derivative = { version = "2", features = [ "use_core" ] }
rand_chacha = { version = "0.3.0", default-features = false }
ark-marlin = {version = "^0.3.0", default-features = false }
indicatif = { version = "0.16.2" }

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
blake2 = { version = "0.9", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
debug = true

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[profile.dev]
opt-level = 3
panic = 'abort'

[features]
default = [ "std", "parallel" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-nonnative-field/std", "ark-poly/std", "ark-std/std", "ark-relations/std", "ark-serialize/std", "ark-sponge/std"]
r1cs = [ "ark-relations", "ark-r1cs-std", "ark-nonnative-field", "hashbrown", "ark-sponge/r1cs"]
print-trace = [ "ark-std/print-trace" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-std/parallel", "rayon" ]

[[bench]]
name = "hsnp-benches"
path = "benches/bench.rs"
harness = false
required-features = ["std"]

[[bench]]
name = "hsnp-fixed-benches"
path = "benches/fixed_bench.rs"
harness = false
required-features = ["std"]